# kv-server

./: .env  .gitignore  Cargo.toml  README.md  build.rs  cliff.toml  deny.toml
benches/: fibonacci_benchmark.rs  memory_storage_benchmark.rs  redb_storage_benchmark.rs
examples/: .env  bincode.rs  client.rs  compare.rs  demo.rs  gen_cert.rs  prost.rs  redb.rs  tls_client.rs  tls_server.rs
fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
scripts/: readme.md
src/: cmd.rs  error.rs  lib.rs  main.rs  storage.rs
src/cmd/: hdelete.rs  hexist.rs  hget.rs  hset.rs
src/pb/: abi.rs
src/storage/: memory.rs  redb.rs
