[package]
name = "kv_server"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "fibonacci_benchmark"
harness = false

[[bench]]
name = "redb_storage_benchmark"
harness = false

[[bench]]
name = "memory_storage_benchmark"
harness = false

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
bytes = "1.6.0"
certify = "0.5.2"
dashmap = "5.5.3"
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
futures = "0.3"
http = "1.1.0"
lazy_static = "1.4.0"
prost = "0.12.6"
redb = "2.1.0"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webpki-roots = "0.26.2"

[dev-dependencies]
tempfile = "3.10.1"
bincode = "1.3.3"
criterion = "0.5.1"

[build-dependencies]
prost-build = "0.12.6"
